--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
     <section id="product">
       <div class="product-list"></div>
     </section>
+
+    <section class="container">
+      <div class="card">
+        <div class="card-content">
+          <h2 class="card-title">Something Awesome</h2>
+          <p class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            rerum beatae facilis tempore sed labore possimus non, excepturi
+            dolorem odit ipsa ut, enim reiciendis recusandae velit esse.
+            Necessitatibus, ipsam beatae.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+      </div>
+    </section>
     <!-- Footer Section Start -->
     <footer class="footer-section">
       <div class="footer-container">
